@@ -21,9 +21,16 @@ Changes for v2.04
 - Add new processor, TI2541, with interface type JP3.1, ForceEvenStarts modulus defaulting to 4 and learned signal format = 1 (Graham)
 - Add support for activities stored as new segment type 0xE9 (Graham)
 - Update digitmaps.bin to 659 (Dave Reed, Graham)
+- Add new parameter BlockFormat to RDF [General] section (Graham)
 -- Private build 7
-- Add support for writting settings.bin file to SimpleSet remotes on Linux operating system, thanks to findings and a patch provided by tidklaas (Marcin)
+- Update build process from using Java 6 to using Java 7 (Graham)
+- Allow segmented remotes to have no type 00 segments (Graham)
+- Update digitmaps.bin to 660 (Dave Reed, Graham)
+- Private build 8
+- Add support for writing settings.bin file to SimpleSet remotes on Linux operating system, thanks to findings and a patch provided by tidklaas (Marcin)
 - Rewrite detection of SimpleSet remote on Linux operating system (Marcin)
+- Correctly obtain the byte index for a TI2541 executor of the byte that contains the number of fixed and command bytes (Dave Reed)
+- Add learned format == 2 to handle learns from TI2541 (Dave Reed)
 
 Changes for v2.03
 -- Alpha 8 --
